# docker-virtu

./: .gitignore  docker-compose.yml  readme.md
client/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
client/src/core/types/: environments.d.ts
client/src/pages/: index.tsx
client/src/server/router/: index.ts  random.ts
server/: .dockerignore  Cargo.toml  Diesel.toml  Dockerfile  Rocket.toml
server/src/: lib.rs  main.rs  schema.rs
server/src/database/: config.rs
server/src/database/migrations/2023-01-19-105403_create_config/: down.sql  up.sql
server/src/models/: config.rs
server/src/routes/: config.rs  errors.rs  index.rs  mod.rs  random.rs
server/src/utils/: database.rs
