[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = [
    "Bartholomé Gili <dev.bartho@gmail.com"
]

[profile.release]
strip = true
lto = true

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rand = "0.8.5"