[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = [
    "Bartholomé Gili <dev.bartho@gmail.com"
]

[profile.release]
strip = true
lto = true

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rand = "0.8.5"
